package builder

type house struct {
	windowType string
	doorType   string
	floor      int
}
